Fix editor text overflow
Fixes #116

--- a/src/renderer/styles/app-layout-grid.css
+++ b/src/renderer/styles/app-layout-grid.css
@@ -2,9 +2,13 @@
     min-height: calc(100vh);
 }
 
-.editor {
-    min-height: calc(95vh);
+#editor-card {
+    min-height: calc(90vh);
     color: black;
+}
+
+.Pane2 {
+    overflow: auto;
 }
 
 .media-player {
